--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-react": "^7.37.2",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
     "typescript": "^5"
